one small change

--- a/Data_Evaluation/time_series_covid_19_confirmed_and_deaths.ipynb
+++ b/Data_Evaluation/time_series_covid_19_confirmed_and_deaths.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[5 rows x 822 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -280,8 +280,21 @@
        "      <th>Country</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
-       "      <th>Jan 22-April 22, 2020 Cases</th>\n",
-       "      <th>Jan 22-April 22, 2020 Deaths</th>\n",
+       "      <th>Jan 22 - Apr 22 Cases</th>\n",
+       "      <th>Jan 22 - Apr 22 Deaths</th>\n",
+       "      <th>Apr 23 - Apr 29 Cases</th>\n",
+       "      <th>Apr 23 - Apr 29 Deaths</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Dec 9 - Dec 15 Cases</th>\n",
+       "      <th>Dec 9 - Dec 15 Deaths</th>\n",
+       "      <th>Dec 16 - Dec 22 Cases</th>\n",
+       "      <th>Dec 16 - Dec 22 Deaths</th>\n",
+       "      <th>Break 2 Dec 23 - Jan 5 Cases</th>\n",
+       "      <th>Break 2 Dec 23 - Jan 5  Deaths</th>\n",
+       "      <th>Jan 6 - Jan 12 Cases</th>\n",
+       "      <th>Jan 6 - Jan 12 Deaths</th>\n",
+       "      <th>Jan 13 - Jan 19 Cases</th>\n",
+       "      <th>Jan 13 - Jan 19 Deaths</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -295,6 +308,19 @@
        "      <td>-86.644082</td>\n",
        "      <td>468</td>\n",
        "      <td>20</td>\n",
+       "      <td>258</td>\n",
+       "      <td>19</td>\n",
+       "      <td>...</td>\n",
+       "      <td>22849</td>\n",
+       "      <td>292</td>\n",
+       "      <td>25787</td>\n",
+       "      <td>306</td>\n",
+       "      <td>58067</td>\n",
+       "      <td>671</td>\n",
+       "      <td>33718</td>\n",
+       "      <td>367</td>\n",
+       "      <td>35939</td>\n",
+       "      <td>385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -306,6 +332,19 @@
        "      <td>-87.722071</td>\n",
        "      <td>1784</td>\n",
        "      <td>37</td>\n",
+       "      <td>1120</td>\n",
+       "      <td>21</td>\n",
+       "      <td>...</td>\n",
+       "      <td>74294</td>\n",
+       "      <td>987</td>\n",
+       "      <td>81788</td>\n",
+       "      <td>1026</td>\n",
+       "      <td>186637</td>\n",
+       "      <td>2230</td>\n",
+       "      <td>106071</td>\n",
+       "      <td>1207</td>\n",
+       "      <td>112830</td>\n",
+       "      <td>1260</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -317,6 +356,19 @@
        "      <td>-85.387129</td>\n",
        "      <td>237</td>\n",
        "      <td>0</td>\n",
+       "      <td>243</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8875</td>\n",
+       "      <td>210</td>\n",
+       "      <td>9288</td>\n",
+       "      <td>218</td>\n",
+       "      <td>20541</td>\n",
+       "      <td>453</td>\n",
+       "      <td>11493</td>\n",
+       "      <td>245</td>\n",
+       "      <td>12013</td>\n",
+       "      <td>251</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -328,6 +380,19 @@
        "      <td>-87.125115</td>\n",
        "      <td>353</td>\n",
        "      <td>0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9896</td>\n",
+       "      <td>278</td>\n",
+       "      <td>11147</td>\n",
+       "      <td>294</td>\n",
+       "      <td>25216</td>\n",
+       "      <td>616</td>\n",
+       "      <td>14179</td>\n",
+       "      <td>336</td>\n",
+       "      <td>14979</td>\n",
+       "      <td>330</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -339,9 +404,23 @@
        "      <td>-86.567906</td>\n",
        "      <td>435</td>\n",
        "      <td>0</td>\n",
+       "      <td>260</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25963</td>\n",
+       "      <td>331</td>\n",
+       "      <td>29060</td>\n",
+       "      <td>370</td>\n",
+       "      <td>64155</td>\n",
+       "      <td>846</td>\n",
+       "      <td>35200</td>\n",
+       "      <td>524</td>\n",
+       "      <td>36877</td>\n",
+       "      <td>575</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 78 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -352,15 +431,52 @@
        "3  84001007     Bibb  Alabama      US  32.996421 -87.125115   \n",
        "4  84001009   Blount  Alabama      US  33.982109 -86.567906   \n",
        "\n",
-       "   Jan 22-April 22, 2020 Cases  Jan 22-April 22, 2020 Deaths  \n",
-       "0                          468                            20  \n",
-       "1                         1784                            37  \n",
-       "2                          237                             0  \n",
-       "3                          353                             0  \n",
-       "4                          435                             0  "
+       "   Jan 22 - Apr 22 Cases  Jan 22 - Apr 22 Deaths  Apr 23 - Apr 29 Cases  \\\n",
+       "0                    468                      20                    258   \n",
+       "1                   1784                      37                   1120   \n",
+       "2                    237                       0                    243   \n",
+       "3                    353                       0                    256   \n",
+       "4                    435                       0                    260   \n",
+       "\n",
+       "   Apr 23 - Apr 29 Deaths  ...  Dec 9 - Dec 15 Cases  Dec 9 - Dec 15 Deaths  \\\n",
+       "0                      19  ...                 22849                    292   \n",
+       "1                      21  ...                 74294                    987   \n",
+       "2                       1  ...                  8875                    210   \n",
+       "3                       0  ...                  9896                    278   \n",
+       "4                       0  ...                 25963                    331   \n",
+       "\n",
+       "   Dec 16 - Dec 22 Cases  Dec 16 - Dec 22 Deaths  \\\n",
+       "0                  25787                     306   \n",
+       "1                  81788                    1026   \n",
+       "2                   9288                     218   \n",
+       "3                  11147                     294   \n",
+       "4                  29060                     370   \n",
+       "\n",
+       "   Break 2 Dec 23 - Jan 5 Cases  Break 2 Dec 23 - Jan 5  Deaths  \\\n",
+       "0                         58067                             671   \n",
+       "1                        186637                            2230   \n",
+       "2                         20541                             453   \n",
+       "3                         25216                             616   \n",
+       "4                         64155                             846   \n",
+       "\n",
+       "   Jan 6 - Jan 12 Cases  Jan 6 - Jan 12 Deaths  Jan 13 - Jan 19 Cases  \\\n",
+       "0                 33718                    367                  35939   \n",
+       "1                106071                   1207                 112830   \n",
+       "2                 11493                    245                  12013   \n",
+       "3                 14179                    336                  14979   \n",
+       "4                 35200                    524                  36877   \n",
+       "\n",
+       "   Jan 13 - Jan 19 Deaths  \n",
+       "0                     385  \n",
+       "1                    1260  \n",
+       "2                     251  \n",
+       "3                     330  \n",
+       "4                     575  \n",
+       "\n",
+       "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +509,7 @@
     "may7_deaths = covidtotal[\"5/7/20-5/13/20_y\"].to_list()\n",
     "may14_confirmed = covidtotal[\"5/14/20-5/20/20_x\"].to_list()\n",
     "may14_deaths = covidtotal[\"5/14/20-5/20/20_y\"].to_list()\n",
-    "may21_confirmed = covidtotal[\"5/21/20-5/27/20\"].to_list()\n",
+    "may21_confirmed = covidtotal[\"5/21/20-5/27/20_x\"].to_list()\n",
     "may21_deaths = covidtotal[\"5/21/20-5/27/20_y\"].to_list()\n",
     "may28_confirmed = covidtotal[\"5/28/20-6/3/20_x\"].to_list()\n",
     "may28_deaths = covidtotal[\"5/28/20-6/3/20_y\"].to_list()\n",
