--- a/Data_Evaluation/covid_19_bar_chart_covid_confirmed_cases_deaths.ipynb
+++ b/Data_Evaluation/covid_19_bar_chart_covid_confirmed_cases_deaths.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
        "35          1391479             20989  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2088,7 +2088,7 @@
        "35             20989  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2101,7 +2101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2112,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2138,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2175,12 +2175,14 @@
     "green_patch = mpatches.Patch(color='green', label='CA')\n",
     "plt.legend(handles=[blue_patch, green_patch])\n",
     "\n",
+    "plt.savefig(\"output_data/NYandCACases.png\")\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2210,12 +2212,14 @@
     "red_patch = mpatches.Patch(color='red', label='US')\n",
     "plt.legend(handles=[red_patch])\n",
     "\n",
+    "plt.savefig(\"output_data/USCases.png\")\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2252,12 +2256,14 @@
     "green_patch = mpatches.Patch(color='green', label='CA')\n",
     "plt.legend(handles=[blue_patch, green_patch])\n",
     "\n",
+    "plt.savefig(\"output_data/NYandCADeaths.png\")\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2286,6 +2292,8 @@
     "\n",
     "red_patch = mpatches.Patch(color='red', label='US')\n",
     "plt.legend(handles=[red_patch])\n",
+    "\n",
+    "plt.savefig(\"output_data/USDeaths.png\")\n",
     "\n",
     "plt.show()"
    ]
